infra/vpc.tf
resource "aws_vpc" "custom_vpc" {
  cidr_block           = var.vpc_cidr
  enable_dns_support   = true
  enable_dns_hostnames = true
  tags = {
    Name = "custom_vpc"
  }
}

output "vpc_id" {
  value = aws_vpc.custom_vpc.id
}
